# spoti-loader

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: package.yml
spoti_loader/: const.py  downloader.py  main.py  utils.py
