[tool.poetry]
name = "spoti-loader"
version = "0.1.0"
description = ""
authors = ["Mohamed Hamdi <haamdi@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
librespot = { git = "https://github.com/kokarare1212/librespot-python.git" }
ffmpy = "*"
music_tag = "*"
Pillow = "*"
protobuf = "==3.20.1"
pwinput = "*"
tabulate = "*"
tqdm = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
